--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,25 +4,21 @@
 #
 version: 2
 jobs:
-  build:
+  linux-build:
     docker:
       # specify the version you desire here
       - image: cimg/openjdk:15.0.2
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
     working_directory: ~/repo
-
-    environment:
-      # Customize the JVM maximum heap limit
-      JVM_OPTS: -Xmx3200m
-      TERM: dumb
-
     steps:
       - checkout
       - run:
           name: "Run tests"
-          command: ./gradlew test
+          command: ./gradlew iTest
+      - store_test_results:
+          path: ~/repo/build/reports/tests/iTest/index.html
+
+workflows:
+  version: 2
+  all-os-build:
+    jobs:
+      - linux-build
