Change test output directory

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,10 @@ jobs:
           name: "Run tests"
           command: ./gradlew iTest
       - store_test_results:
-          path: ~/repo/build/reports/tests/iTest/index.html
+          path: ~/repo/build/reports/tests/iTest/
+      -run:
+          name: "Create Package deb"
+          command: ./gradlew packageDeb
 
 workflows:
   version: 2
