--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,15 +56,17 @@ jobs:
       xcode: 12.4.0
     steps:
       - checkout
+      - read_cache
       - attach_workspace:
             at: artifacts
       - run: brew tap adoptopenjdk/openjdk
       - run: brew install adoptopenjdk15
       - run: echo 'export PATH="/Library/Java/JavaVirtualMachines/adoptopenjdk-15.jdk/Contents/Home/bin:$PATH"' >> ~/.zshrc
       - run: source ~/.zshrc
+      - run: java - version
       - run:
           name: "Create DMG"
-          command: ./gradlew packageDmg
+          command: ./gradlew packageDmg --stacktrace
       - run:
           name: "Store dmg to workspace"
           command: cp ~/repo/build/compose/binaries/main/dmg/* artifacts/
