--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,11 +58,13 @@ jobs:
       - checkout
       - attach_workspace:
             at: artifacts
+      - run: java -version
+      - run: brew cask uninstall java
       - run: brew tap adoptopenjdk/openjdk
       - run: brew install adoptopenjdk15
       - run: echo 'export PATH="/Library/Java/JavaVirtualMachines/adoptopenjdk-15.jdk/Contents/Home/bin:$PATH"' >> ~/.zshrc
       - run: source ~/.zshrc
-      - run: java - version
+      - run: java -version
       - run:
           name: "Create DMG"
           command: ./gradlew packageDmg --stacktrace
