--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,11 +64,17 @@ jobs:
       - run: export JAVA_HOME=/Library/Java/JavaVirtualMachines/adoptopenjdk-15.jdk/Contents/Home
       - run: java -version
       - run:
+          name: "Decode signing cert"
+          command: base64 -D -o cert.p12 <<< $SIGNING_CERT
+      - run:
+          name: "Import signing cert"
+          command: security import ./cert.p12 -P $SIGNING_PASS
+      - run:
           name: "Create DMG"
           command: ./gradlew packageDmg --stacktrace
       - run:
           name: "Store dmg to workspace"
-          command: cp ~/repo/build/compose/binaries/main/dmg/* artifacts/
+          command: cp ~/project/build/compose/binaries/main/dmg/* artifacts/
       - run:
           name: "Notarize DMG"
           command: ./gradlew notarizeDmg
