--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ jobs:
       - run: java -version
       - run:
           name: "Decode signing cert"
-          command: base64 -D -o cert.p12 <<< $SIGNING_CERT
+          command: base64 -D -o cert.p12 \<<< $SIGNING_CERT
       - run:
           name: "Import signing cert"
           command: security import ./cert.p12 -P $SIGNING_PASS
