Add timout keychain unlock

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,6 +90,7 @@ jobs:
             security list-keychains -s "compose.keychain"
             security default-keychain -s "compose.keychain"
             security unlock-keychain -p "keychain-pass" "compose.keychain"
+            security set-keychain-settings -lut 7200 "compose.keychain"
       - run:
           name: "Check current java version"
           command: java -version
